--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <style>
+      .jumbotron{
+        background-color: #660708;}
+    </style>
+
 
     <title>Daffa Widoseno Ardras</title>
   </head>
@@ -21,23 +26,16 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="#Home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#About Me">About Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="#Academic">Academic</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown link
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
+        <li class="nav-item">
+          <a class="nav-link" href="#Contac Person">Contac Person</a>
         </li>
       </ul>
     </div>
@@ -45,16 +43,45 @@
 </nav>
     <!--Akhir Navbar-->
     <!--jumbotron-->
-    <seaction class="jumbotron jumbotron-fluid text-center">
-      <p><img src="http://localhost/pbw/bootstrapdaffa/terbaru2.jpg"
-      style="width:250px;height:400px;" align="middle"
+    <section class="jumbotron jumbotron-fluid text-center">
+      <p><img src="http://localhost/pbw/bootstrapdaffa/kotak%201.jpg"
+      style="width:500px;height:500px;" align="middle"
       class="rounded-circle"> </p>
   <div class="container">
-    <h1 class="display-4">Daffa Widoseno Ardras</h1>
-    <p class="lead">Programmer | Desiner | Video Editor | Photoshop</p>
-  </seaction>
-</div>
+    <h1 class="display-4" style=" color: #05668d" >Daffa Widoseno Ardras</h1>
+    <p class="lead" style=" color: #ffffff" >Programmer | Desiner | Vector</p>
+    </div>
+    <!-- SVG Satu -->
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#b1a7a6" fill-opacity="1" d="M0,160L10.4,160C20.9,160,42,160,63,133.3C83.5,107,104,53,125,74.7C146.1,96,167,192,188,218.7C208.7,245,230,203,250,192C271.3,181,292,203,313,202.7C333.9,203,355,181,376,186.7C396.5,192,417,224,438,234.7C459.1,245,480,235,501,213.3C521.7,192,543,160,563,170.7C584.3,181,605,235,626,256C647,277,668,267,689,261.3C709.6,256,730,256,751,218.7C772.2,181,793,107,814,106.7C834.8,107,856,181,877,192C897.4,203,918,149,939,112C960,75,981,53,1002,85.3C1022.6,117,1043,203,1064,224C1085.2,245,1106,203,1127,176C1147.8,149,1169,139,1190,160C1210.4,181,1231,235,1252,229.3C1273,224,1294,160,1315,165.3C1335.7,171,1357,245,1377,256C1398.3,267,1419,213,1430,186.7L1440,160L1440,320L1429.6,320C1419.1,320,1398,320,1377,320C1356.5,320,1336,320,1315,320C1293.9,320,1273,320,1252,320C1231.3,320,1210,320,1190,320C1168.7,320,1148,320,1127,320C1106.1,320,1085,320,1064,320C1043.5,320,1023,320,1002,320C980.9,320,960,320,939,320C918.3,320,897,320,877,320C855.7,320,835,320,814,320C793,320,772,320,751,320C730.4,320,710,320,689,320C667.8,320,647,320,626,320C605.2,320,584,320,563,320C542.6,320,522,320,501,320C480,320,459,320,438,320C417.4,320,397,320,376,320C354.8,320,334,320,313,320C292.2,320,271,320,250,320C229.6,320,209,320,188,320C167,320,146,320,125,320C104.3,320,83,320,63,320C41.7,320,21,320,10,320L0,320Z">
+      </path>
+    </svg>
+    </section>
+
     <!--Akhir jumbotron-->
+    <!--About-->
+    <section id="About">
+        <h1 class="text-center" >About Me</h1>
+        <div class="conteiner" background-color: "#6b1a7a6" >
+            <div class="row">
+            <div class="col">
+                <p>Saya Fabiano Milan Almufqi Domisili Karawang Umur 20 tahun. Saya seorang freshgraduate yang memiliki kemampuan dalam membuat 
+                  sebuah program sederhana seperti membuat sebuah website, program kasir, dan program sederhana lainnya.</p>
+            </div>
+            <div class="col">
+                <p>Saya juga sedikit menguasai software desain dan edit video seperti Photosop dan Filmora Wondershare.
+                  Saya juga bisa sedikit mendesain sebuah website dengan bootstrap atau javascirpt.
+                </p>
+            </div>
+            </div>
+        </div>
+        <!-- SVG dua -->
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path fill="#f5f3f4" fill-opacity="1" d="M0,160L10.4,160C20.9,160,42,160,63,133.3C83.5,107,104,53,125,74.7C146.1,96,167,192,188,218.7C208.7,245,230,203,250,192C271.3,181,292,203,313,202.7C333.9,203,355,181,376,186.7C396.5,192,417,224,438,234.7C459.1,245,480,235,501,213.3C521.7,192,543,160,563,170.7C584.3,181,605,235,626,256C647,277,668,267,689,261.3C709.6,256,730,256,751,218.7C772.2,181,793,107,814,106.7C834.8,107,856,181,877,192C897.4,203,918,149,939,112C960,75,981,53,1002,85.3C1022.6,117,1043,203,1064,224C1085.2,245,1106,203,1127,176C1147.8,149,1169,139,1190,160C1210.4,181,1231,235,1252,229.3C1273,224,1294,160,1315,165.3C1335.7,171,1357,245,1377,256C1398.3,267,1419,213,1430,186.7L1440,160L1440,320L1429.6,320C1419.1,320,1398,320,1377,320C1356.5,320,1336,320,1315,320C1293.9,320,1273,320,1252,320C1231.3,320,1210,320,1190,320C1168.7,320,1148,320,1127,320C1106.1,320,1085,320,1064,320C1043.5,320,1023,320,1002,320C980.9,320,960,320,939,320C918.3,320,897,320,877,320C855.7,320,835,320,814,320C793,320,772,320,751,320C730.4,320,710,320,689,320C667.8,320,647,320,626,320C605.2,320,584,320,563,320C542.6,320,522,320,501,320C480,320,459,320,438,320C417.4,320,397,320,376,320C354.8,320,334,320,313,320C292.2,320,271,320,250,320C229.6,320,209,320,188,320C167,320,146,320,125,320C104.3,320,83,320,63,320C41.7,320,21,320,10,320L0,320Z">  
+          </path>
+        </svg>
+    </section>
+    <!--Akhiran About-->
 
 
 
