--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="row">
              <div class="col text-center">
                 <div class="card" style="width: 18rem;">
-                    <img src="https://1.bp.blogspot.com/-f-laxVF8F-E/YIZx3_XCqcI/AAAAAAAARuI/jcqJnHH81tQKPWHiNIbILn0tHugyJ-wFwCLcBGAsYHQ/s300/Al%2Birsyad.jpg"
+                    <img src="http://localhost/pbw/bootstrapdaffa/sd.jpg"
                      class="card-img-top animate__animated animate__zoomInLeft" alt="...">
                     <div class="card-body">
                       <p class="card-text">SDIT Al irsyad Al Islamiyah Karawang</p>
@@ -100,7 +100,7 @@
                   </div>
                   <div class="col text-center">
                     <div class="card" style="width: 18rem;">
-                        <img src="https://1.bp.blogspot.com/-My-EXprRk68/YIZx4EuPEJI/AAAAAAAARuQ/vPPOQ8X_dUoecjl8eUViWYJv2PX8irXYQCLcBGAsYHQ/s1581/Almasoem.jpg" 
+                        <img src="http://localhost/pbw/bootstrapdaffa/smp.jpg" 
                         class="card-img-top animate__animated animate__zoomIn" alt="...">
                         <div class="card-body">
                           <p class="card-text">SMP Al Ma'soem Boarding School</p>
@@ -109,7 +109,7 @@
                   </div>
                   <div class="col text-center">
                     <div class="card" style="width: 18rem;">
-                        <img src="https://1.bp.blogspot.com/-HFY84ShD3NE/YIZx3wX2jKI/AAAAAAAARuM/tfD0iNH6wtkGzLXZ0ugU6XUBvAzO-sjOQCLcBGAsYHQ/s1024/Harum.jpg" 
+                        <img src="http://localhost/pbw/bootstrapdaffa/sma.png" 
                         class="card-img-top animate__animated animate__zoomInRight" alt="...">
                         <div class="card-body">
                           <p class="card-text">SMAIT Harapan Umat Karawang</p>
@@ -125,6 +125,12 @@
         </svg>
     </section>
     <!--Akhiran Academic-->
+    <!--My Vector-->
+
+
+
+
+    <!--Akhiran My Vector-->
     <!--Contac Person-->
     <section id="About" style="background-color: #ffffff !important;">
     <title>Contact Person</title>
