--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <img src="http://localhost/pbw/bootstrapdaffa/sd.jpg"
                      class="card-img-top animate__animated animate__zoomInLeft" alt="...">
                     <div class="card-body">
-                      <p class="card-text">SDIT Al irsyad Al Islamiyah Karawang</p>
+                      <p class="card-text">SDN Pinayungan 1 Karawang Barat</p>
                     </div>
                   </div>
                   </div>
@@ -103,7 +103,7 @@
                         <img src="http://localhost/pbw/bootstrapdaffa/smp.jpg" 
                         class="card-img-top animate__animated animate__zoomIn" alt="...">
                         <div class="card-body">
-                          <p class="card-text">SMP Al Ma'soem Boarding School</p>
+                          <p class="card-text">SMPN 3 Karawang Barat</p>
                         </div>
                   </div>
                   </div>
@@ -112,7 +112,7 @@
                         <img src="http://localhost/pbw/bootstrapdaffa/sma.png" 
                         class="card-img-top animate__animated animate__zoomInRight" alt="...">
                         <div class="card-body">
-                          <p class="card-text">SMAIT Harapan Umat Karawang</p>
+                          <p class="card-text">SMAN 2 Telukjambe Timur Karawang Barat</p>
                         </div>
                   </div>
                   </div>
