--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a class="nav-link" href="#Academic">Academic</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#Contac Person">Contac Person</a>
+          <a class="nav-link" href="#Contac Person">Contact Person</a>
         </li>
       </ul>
     </div>
@@ -59,19 +59,20 @@
     </section>
 
     <!--Akhir jumbotron-->
-    <!--About-->
-    <section id="About" style="background-color: #B1A7A6 !important;">
-        <h1 class="text-center" >About Me</h1>
+    <!--Introduce Me-->
+    <section id="Introduce Me" style="background-color: #B1A7A6 !important;">
+        <h1 class="text-center" >Introduce Me</h1>
 
         <div class="container">
 
             <div class="row">
             <div class="col">
-                <p>Saya Fabiano Milan Almufqi Domisili Karawang Umur 20 tahun. Saya seorang freshgraduate yang memiliki kemampuan dalam membuat 
-                  sebuah program sederhana seperti membuat sebuah website, program kasir, dan program sederhana lainnya.</p>
+                <p>Perkenalkan nama saya Daffa Widoseno Ardras domisili Karawang Umur 20 tahun. 
+                  Saya seseorang memiliki kemampuan dalam membuat sebuah program sederhana.
+                </p>
             </div>
             <div class="col">
-                <p>Saya juga sedikit menguasai software desain dan edit video seperti Photosop dan Filmora Wondershare.
+                <p>Saya juga sedikit menguasai software illustrator desain dan edit photoshop .
                   Saya juga bisa sedikit mendesain sebuah website dengan bootstrap atau javascirpt.
                 </p>
             </div>
@@ -83,7 +84,7 @@
           </path>
         </svg>
     </section>
-    <!--Akhiran About-->
+    <!--Akhiran Introduce Me-->
     <!--Academic-->
     <section id="About" style="background-color: #f5f3f4 !important;">
         <h1 class="text-center">History Academic</h1>
@@ -91,8 +92,7 @@
             <div class="row">
              <div class="col text-center">
                 <div class="card" style="width: 18rem;">
-                    <img src="http://localhost/pbw/bootstrapdaffa/sd.jpg"
-                     class="card-img-top animate__animated animate__zoomInLeft" alt="...">
+                    <img src="http://localhost/pbw/bootstrapdaffa/sd.jpg">
                     <div class="card-body">
                       <p class="card-text">SDN Pinayungan 1 Karawang Barat</p>
                     </div>
@@ -100,8 +100,7 @@
                   </div>
                   <div class="col text-center">
                     <div class="card" style="width: 18rem;">
-                        <img src="http://localhost/pbw/bootstrapdaffa/smp.jpg" 
-                        class="card-img-top animate__animated animate__zoomIn" alt="...">
+                        <img src="http://localhost/pbw/bootstrapdaffa/smp.jpg">
                         <div class="card-body">
                           <p class="card-text">SMPN 3 Karawang Barat</p>
                         </div>
@@ -109,8 +108,7 @@
                   </div>
                   <div class="col text-center">
                     <div class="card" style="width: 18rem;">
-                        <img src="http://localhost/pbw/bootstrapdaffa/sma.png" 
-                        class="card-img-top animate__animated animate__zoomInRight" alt="...">
+                        <img src="http://localhost/pbw/bootstrapdaffa/sma.png">
                         <div class="card-body">
                           <p class="card-text">SMAN 2 Telukjambe Timur Karawang Barat</p>
                         </div>
@@ -125,12 +123,6 @@
         </svg>
     </section>
     <!--Akhiran Academic-->
-    <!--My Vector-->
-
-
-
-
-    <!--Akhiran My Vector-->
     <!--Contac Person-->
     <section id="About" style="background-color: #ffffff !important;">
     <title>Contact Person</title>
