--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!--Akhir Navbar-->
     <!--jumbotron-->
     <section class="jumbotron jumbotron-fluid text-center">
-      <p><img src="http://localhost/pbw/bootstrapdaffa/kotak%201.jpg"
+      <p><img src="https://1.bp.blogspot.com/-nya2W3zcKJU/YIgk0GSDCzI/AAAAAAAARx4/PvElQJyaglcGCTyoid8akAhD9SFQWAWOwCLcBGAsYHQ/s1280/WhatsApp%2BImage%2B2021-04-27%2Bat%2B21.48.31.jpeg"
       style="width:500px;height:500px;" align="middle"
       class="rounded-circle"> </p>
   <div class="container">
@@ -92,7 +92,7 @@
             <div class="row">
              <div class="col text-center">
                 <div class="card" style="width: 18rem;">
-                    <img src="http://localhost/pbw/bootstrapdaffa/sd.jpg">
+                    <img src="https://1.bp.blogspot.com/-XLVgJuKR5xc/YIgk1G2cVqI/AAAAAAAARx8/-rcgwGjoRqQoUAsINyi7OeB7Ya7KtekQgCLcBGAsYHQ/s512/WhatsApp%2BImage%2B2021-04-27%2Bat%2B21.48.32.jpeg">
                     <div class="card-body">
                       <p class="card-text">SDN Pinayungan 1 Karawang Barat</p>
                     </div>
@@ -100,7 +100,7 @@
                   </div>
                   <div class="col text-center">
                     <div class="card" style="width: 18rem;">
-                        <img src="http://localhost/pbw/bootstrapdaffa/smp.jpg">
+                        <img src="https://1.bp.blogspot.com/-Kwok-5PdovA/YIgk0AhYa3I/AAAAAAAARxw/wGDWSMmHf0cFASq3Pv6pZjAaoCG4bkz_wCLcBGAsYHQ/s259/WhatsApp%2BImage%2B2021-04-27%2Bat%2B21.48.32%2B%25282%2529.jpeg">
                         <div class="card-body">
                           <p class="card-text">SMPN 3 Karawang Barat</p>
                         </div>
@@ -108,7 +108,7 @@
                   </div>
                   <div class="col text-center">
                     <div class="card" style="width: 18rem;">
-                        <img src="http://localhost/pbw/bootstrapdaffa/sma.png">
+                        <img src="https://1.bp.blogspot.com/-GPw-_5SCgMM/YIgk0BicbGI/AAAAAAAARx0/Hd8PpkLvmKMwMLtFkb60CSaolJMC1_SgwCLcBGAsYHQ/s500/WhatsApp%2BImage%2B2021-04-27%2Bat%2B21.48.32%2B%25281%2529.jpeg">
                         <div class="card-body">
                           <p class="card-text">SMAN 2 Telukjambe Timur Karawang Barat</p>
                         </div>
